--- a/scripts/challenge_6_atp_ranking_data_across_seasons.ipynb
+++ b/scripts/challenge_6_atp_ranking_data_across_seasons.ipynb
@@ -76,7 +76,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4ebc1630",
-        "outputId": "5f2c0059-daa5-4525-a9b7-034a96dda56c"
+        "outputId": "420a853c-08a9-4997-d40e-ba2c56ccd512"
       },
       "source": [
         "# Get only the date value\n",
@@ -158,7 +158,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bfea78da",
-        "outputId": "566b995d-ccd9-4ce1-a724-115337b234e6"
+        "outputId": "ce26a409-62c1-4ebb-e7a6-561fa15ff395"
       },
       "source": [
         "#Filter the 'ranking_values' list to include only the last December dates for the years 2024, 2020, 2016, 2012, 2008, and 2004.\n",
@@ -198,7 +198,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4bce50bf",
-        "outputId": "8452cdc4-aea6-46e5-9858-e83bd96afaf7"
+        "outputId": "eebb94bd-f930-41f4-ffb2-549bfda7b16f"
       },
       "source": [
         "#This loop iterate through the filtered dates, fetch the ranking data for each year, clean it, and save it as a separate JSON file.\n",
@@ -239,9 +239,19 @@
         "\n",
         "    # Convert 'points' to numeric\n",
         "    player_data_clean['points'] = pd.to_numeric(player_data_clean['points'], errors='coerce')\n",
-        "    # Drop rows where points could not be converted (e.g., if there were non-numeric values that weren't caught)\n",
-        "    player_data_clean.dropna(subset=['points'], inplace=True)\n",
-        "    player_data_clean['points'] = player_data_clean['points'].astype(int)\n",
+        "\n",
+        "    # Calculate the difference between player rank 3 and the rest.\n",
+        "    points_rank_three = player_data_clean.loc[2, 'points']\n",
+        "    player_data_clean[\"diff_rank_three\"] = abs(player_data_clean[\"points\"] - points_rank_three)\n",
+        "\n",
+        "    # Column with the last name\n",
+        "    player_data_clean['last_name'] = player_data_clean['player_name'].apply(lambda x: x.split(' ', 1)[1] if len(x.split(' ', 1)) > 1 else '')\n",
+        "\n",
+        "    # Pass data to number\n",
+        "    player_data_clean['rank'] = player_data_clean['rank'].astype(str).str.replace('T', '', regex=False)\n",
+        "    player_data_clean['rank'] = pd.to_numeric(player_data_clean['rank'], errors='coerce')\n",
+        "    player_data_clean['age'] = pd.to_numeric(player_data_clean['age'], errors='coerce')\n",
+        "    player_data_clean['n_tournaments'] = pd.to_numeric(player_data_clean['n_tournaments'], errors='coerce')\n",
         "\n",
         "    # Save the cleaned data to a JSON file\n",
         "    save_path = f'atp_ranking_{year}.json'\n",
